--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 HTML CSS Result Skip Results Iframe
 /* GLOBAL STYLES */
 body {
-  background: black;
+  background-color: coral;
   padding-top: 5em;
   display: flex;
   justify-content: center;
